crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__backslash_continuation_at_root.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    If 0..2,
    True 3..7,
    Colon 7..8,
    Newline 8..9,
    Indent 9..15,
    Int 15..16,
    Newline 16..17,
    If 21..23,
    True 24..28,
    Colon 28..29,
    Newline 29..30,
    Indent 30..40,
    Int 40..41,
    Newline 41..42,
    Dedent 42..42,
    Dedent 42..42,
    Else 42..46,
    Colon 46..47,
    Int 53..54,
    Newline 54..55,
]
```
