crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__backslash_continuation_indentation.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    If 0..2,
    True 3..7,
    Colon 7..8,
    Newline 8..9,
    Indent 9..13,
    Int 13..14,
    Newline 14..15,
    Int 29..30,
    Newline 30..31,
    Int 37..38,
    Newline 38..39,
    Dedent 39..39,
    Else 39..43,
    Colon 43..44,
    Newline 44..45,
    Indent 45..49,
    Pass 49..53,
    Newline 53..54,
    Dedent 54..54,
]
```
