crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__bom.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    Identifier 3..4,
    Equal 5..6,
    Int 7..8,
    Newline 8..8,
]
```
