crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__bom_with_offset_edge.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: "lex_source_with_offset(source, TextSize::new(11))"
---
## Tokens
```
[
    Identifier 11..12,
    Newline 12..12,
]
```
