crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__comment_until_mac_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: comment_until_eol(MAC_EOL)
---
## Tokens
```
[
    Int 0..3,
    Comment 5..10,
    Newline 10..11,
    Int 11..14,
    Newline 14..14,
]
```
