crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__comment_until_windows_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: comment_until_eol(WINDOWS_EOL)
---
## Tokens
```
[
    Int 0..3,
    Comment 5..10,
    Newline 10..12,
    Int 12..15,
    Newline 15..15,
]
```
