crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__dedent_after_whitespace.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    If 0..2,
    Identifier 3..8,
    Colon 8..9,
    Newline 9..10,
    Indent 10..14,
    If 14..16,
    Identifier 17..23,
    Colon 23..24,
    Newline 24..25,
    Indent 25..33,
    Pass 33..37,
    Newline 37..38,
    Dedent 42..42,
    Identifier 42..45,
    Newline 45..46,
    Dedent 46..46,
]
```
